--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,15 @@
 Package: FLOPART
 Type: Package
 Title: Functional Labeled Optimal Partitioning
-Version: 2020.02.05
+Version: 2021.4.28
 Author: Toby Hocking, Alyssa Stenberg
 Maintainer: Alyssa Stenberg <ajs937@nau.edu>
-Description: Labeled segmentation
+Description: Provides an efficient C++ code for computing an
+ optimal segmentation model with Poisson loss,
+ up-down constraints, and label constraints.
 License: GPL-3
 RoxygenNote: 7.1.1
+Suggests: testthat
+Depends: R (>= 2.10)
+LinkingTo: Rcpp
+Imports: Rcpp
