--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,16 @@
 Package: FLOPART
 Type: Package
 Title: Functional Labeled Optimal Partitioning
-Version: 2022.2.23
+Version: 2023.8.31
 Author: Toby Dylan Hocking, Alyssa Stenberg
 Maintainer: Toby Dylan Hocking <toby.hocking@r-project.org>
-Description: Provides an efficient C++ code for computing an
- optimal segmentation model with Poisson loss,
- up-down constraints, and label constraints.
+Description:
+ Provides an efficient C++ code for computing an
+ optimal segmentation model
+ <arXiv:2210.02580>
+ with Poisson loss,
+ up-down constraints,
+ and label constraints.
 License: GPL-3
 RoxygenNote: 7.2.3
 Suggests:
