--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Description:
  with Poisson loss,
  up-down constraints,
  and label constraints,
- as described by Kaufman et al. (2022) <arXiv:2210.02580>.
+ as described by Kaufman et al. (2024) <doi:10.1080/10618600.2023.2293216>.
 License: GPL-3
 RoxygenNote: 7.3.1
 Suggests:
